    by rootskel (from version 1.59); the current test does not work as it
    requires the D-I kernel to have SMP support, which it hasn't.
    Thanks to Grant Grundler for his suggestions.
  * powerpc: correctly recognize systems with 'RS64-IV (sstar)' cpu as
    powerpc64 (closes: #469030).
  * Add support for PA Semi's evaluation systems (#464429). Thanks to
    Olof Johansson for the patch.

  [ Otavio Salvador ]
  * Add facility to include and exclude packages from the base system by
    preseeding base-installer/includes and base-installer/excludes. Adding
    packages using base_include and base_include CD files still works and
    the packages are added to the preseeded ones.
  * Add facility to use a specific script by preseeding
    base-installer/script.

 -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 17:01:22 +0100

base-installer (1.88) unstable; urgency=low

  [ Joey Hess ]
  * Demote Transmeta Crusoe systems to use the 486 kernel.
    Based on #464962, Crusoe lacks support for a long NOP instruction,
    which gcc has begun using when optimising for the 686.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 10:48:39 -0200

base-installer (1.87) unstable; urgency=low

  [ Christian Perrier ]
  * Add a dependency on ${misc:Depends} for base-installer so that it
    depends properly on debconf.

  [ Aurelien Jarno ]
  * Add support for the MIPS Malta platform.

  [ Colin Watson ]
  * Silence syslog noise if /usr/lib/base-installer.d or
    /usr/lib/post-base-installer.d is empty.

  [ Frans Pop ]
  * Whitespace cleanup: reduce indentation in kernel selection scripts.
  * Update kernel tests for i386 and powerpc.
  * Change kernel usability tests for all arches so that by default any