@@ -13,6 +13,8 @@ base-installer (1.89) UNRELEASED; urgency=low
     powerpc64 (closes: #469030).
   * Add support for PA Semi's evaluation systems (#464429). Thanks to
     Olof Johansson for the patch.
+  * Now that changing CDs is supported, stop bind mounting /cdrom in /target
+    except for hd-media installs.
 
   [ Otavio Salvador ]
   * Add facility to include and exclude packages from the base system by
@@ -22,7 +24,7 @@ base-installer (1.89) UNRELEASED; urgency=low
   * Add facility to use a specific script by preseeding
     base-installer/script.
 
- -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 17:01:22 +0100
+ -- Frans Pop <fjp@debian.org>  Mon, 17 Mar 2008 00:07:26 +0100
 
 base-installer (1.88) unstable; urgency=low
 
